Master - Added server and client
